<resources>
    <string name="app_name">Extra Settings</string>
    <string name="action_settings">Settings</string>
    <string name="follow_me">Follow Me on Weibo</string>
    <string name="follow_me_title">Follow Me</string>
    <string name="donate_title">Donate</string>
    <string name="donate_me_summary">Donate me by Alipay or WeChat Payment</string>
    <string name="about_title">About</string>
    <string name="misc_title">Misc</string>
    <string name="fingerprint_key_title">Fingerprint Gesture</string>
    <string name="touch_once">Touch Once</string>
    <string name="long_touch">Long Touch</string>
    <string name="swipe_right">Swipe Right</string>
    <string name="swipe_left">Swipe Left</string>
    <string name="resolution_restore_summary">Restore Resolution to 2k</string>
    <string name="resolution_restore">Restore Resolution</string>
    <string name="follow_me_bili">Follow me on BiliBili</string>
    <string name="donate_me_wechat">Donate me by Wechat Payment</string>
    <string name="donate_me_alipay">Donate me by Alipay</string>
    <string name="author">Author</string>
    <string name="reboot_recovery">Reboot to Recovery</string>
    <string name="reboot_bl">Reboot to Bootloader</string>
    <string name="reboot_title">Advanced Reboot</string>
    <string name="remove_app_summary">Remove the Preinstalled app</string>
    <string name="remove_app">Remove Preinstall App</string>
    <string name="disable_nav_bar">Disable Navigation Bar</string>
    <string name="disable_nav_bar_summary">Use hardware key only.It can also disable the gesture</string>
</resources>
