<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name">

    <androidx.preference.PreferenceCategory
        android:title="@string/fingerprint_key_title"
        android:layout="@layout/preference_category_widget">
        <androidx.preference.ListPreference
            android:key="touch"
            android:entries="@array/key_code"
            android:entryValues="@array/key_code_entry"
            android:title="@string/touch_once" />
        <androidx.preference.ListPreference
            android:key="swipe_left"
            android:entries="@array/key_code"
            android:entryValues="@array/key_code_entry"
            android:title="@string/swipe_left" />
        <androidx.preference.ListPreference
            android:key="swipe_right"
            android:entries="@array/key_code"
            android:entryValues="@array/key_code_entry"
            android:title="@string/swipe_right" />
        <androidx.preference.ListPreference
            android:key="long_touch"
            android:entries="@array/key_code"
            android:entryValues="@array/key_code_entry"
            android:title="@string/long_touch" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/misc_title"
        android:layout="@layout/preference_category_widget">
        <androidx.preference.Preference
            android:key="resolution"
            android:summary="@string/resolution_restore_summary"
            android:title="@string/resolution_restore" />
        <androidx.preference.Preference
            android:key="removeapp"
            android:summary="@string/remove_app_summary"
            android:title="@string/remove_app" />
        <androidx.preference.CheckBoxPreference
            android:key="navdisable"
            android:summary="@string/disable_nav_bar_summary"
            android:title="@string/disable_nav_bar" />
        <androidx.preference.Preference
            android:title="Moto Mods Manager" >
            <intent
                android:action="com.motorola.modservice.ui.action.MAIN"/>
        </androidx.preference.Preference>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/reboot_title"
        android:layout="@layout/preference_category_widget">
        <androidx.preference.Preference
            android:key="recovery"
            android:title="@string/reboot_recovery" >
        </androidx.preference.Preference>
        <androidx.preference.Preference
            android:key="bootloader"
            android:title="@string/reboot_bl" >
        </androidx.preference.Preference>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/follow_me_title"
        android:layout="@layout/preference_category_widget">
        <androidx.preference.Preference
            android:title="@string/author"
            android:summary="Art_Chen">
        </androidx.preference.Preference>
        <androidx.preference.Preference
            android:title="@string/follow_me">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://weibo.com/imchenxy"/>
        </androidx.preference.Preference>
        <androidx.preference.Preference
            android:title="@string/follow_me_bili">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://space.bilibili.com/7697432"/>
        </androidx.preference.Preference>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/donate_title"
        android:layout="@layout/preference_category_widget">
        <androidx.preference.Preference
            android:key="wechat"
            android:title="@string/donate_me_wechat" >
        </androidx.preference.Preference>
        <androidx.preference.Preference
            android:key="alipay"
            android:title="@string/donate_me_alipay" >
        </androidx.preference.Preference>
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>